--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,24 +1,14 @@
 <div class="container_24 " ng-controller="galleryController as gallery">
-		<div class="container_24 ">
-			<div class="form-group">
-				<div class="checkbox">
-					<label>
-						<h4 class="text-checkbox"><input type="checkbox" name="accept" class="checkbox" validator="required" no-validation-message="true">
-						nooo</h4>
-					</label>
-				</div>
-				<div class="checkbox">
-					<label>
-						<h4 class="text-checkbox"></h4><input type="checkbox" name="accept" class="checkbox" validator="required" no-validation-message="true">
-						sii</h4>
-					</label>
-				</div>
-				<div class="checkbox">
-					<label>
-						<h4 class="text-checkbox"><input type="checkbox" name="accept" class="checkbox" validator="required" no-validation-message="true">
-						+/-</h4>
-					</label>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="row">
+	<div class="col-md-12 d-flex justify-content-center mb-5"> <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="all">All</button> <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="1">Mountains</button> <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="2">Sea</button> </div>
+</div> 
+
+<div class="gallery" id="gallery">
+	<div class="mb-3 pics animation all 2"> <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg" alt="Card image cap"> </div>
+	<div class="mb-3 pics animation all 1"> <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg" alt="Card image cap"> </div>
+	<div class="mb-3 pics animation all 1"> <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg" alt="Card image cap"> </div>
+	<div class="mb-3 pics animation all 2"> <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(35).jpg" alt="Card image cap"> </div>
+	<div class="mb-3 pics animation all 2"> <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg" alt="Card image cap"> </div>
+	<div class="mb-3 pics animation all 1"> <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg" alt="Card image cap"> </div>
+</div> 
+</div>
