--- a/views/task.html
+++ b/views/task.html
@@ -1,7 +1,34 @@
 <div
     class="container_24 "
-    ng-controller="galleryController as gallery"
+    ng-controller="taskController as task"
 >
-	
-</div>
+    <form name>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <div class="input-group-text">
+                    <input
+                        type="checkbox"
+						aria-label="Checkbox for following text input"
+						ng-change="task.listTodos()"
+						ng-model="task.tmp"
+                    >	
+                </div>	
+            </div>
+            <input
+                type="text"
+                class="form-control"
+                aria-label="Text input with checkbox"
+            >
+            <div class="input-group-append">
 
+                <button
+                    class="btn btn-danger"
+                    type="button"
+                >
+                    <i class="fa fa-home"></i>
+                </button>
+            </div>
+		</div>
+		<button class="btn btn-primary" ng-click="task.test()">Save</button>
+    </form>
+</div>
