--- a/views/gallery.html
+++ b/views/gallery.html
@@ -2,34 +2,11 @@
     class="container_24 "
     ng-controller="galleryController as gallery"
 >
-    <form name="uploadForm">
-        <h3>File Uploader</h3>
-        <div class="input-group">
-            <input
-                type="file"
-                file-model
-            >
-            <div class="input-group-btn">
-                <button
-                    class="btn btn-default"
-                    type="submit"
-                    ng-click="gallery.test()"
-                >
-                    Upload
-                </button>
-            </div>
-        </div>
-        <div class="input-group">
-            <div class="input-group-btn">
-                <button
-                    class="btn btn-default"
-                    ng-click="gallery.delete()"
-                >
-                    Eliminar
-                </button>
-            </div>
-        </div>
-    </form>
+<form ng-submit="gallery.uploadFile(file)">
+	<h3>File Uploader</h3>
+	<input type="file" accept="txt" file-model="file" class="form-control">
+	<button type="submit" class="btn btn-primary">Upload File</button>
+  </form>
     <div
         class="gallery"
         id="gallery"
@@ -40,7 +17,7 @@
                 src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
                 alt="Card image cap"
             >
-        </div>
+		</div>
         <div class="mb-3 pics animation all 1">
             <img
                 class="img-fluid"
@@ -75,6 +52,6 @@
                 src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
                 alt="Card image cap"
             >
-        </div>
+		</div>
     </div>
 </div>
