--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar-expand-lg navbar navbar-dark bg-dark">
-    <a
+    <a 
         class="navbar-brand"
     >
         Prueba
@@ -21,13 +21,13 @@
         id="navbarSupportedContent"
     >
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a
                     class="nav-link"
                     href="#/gallery"
                 >
                     GALLERY
-                    <span class="sr-only">(current)</span>
+                    <span class="sr-only"></span>
                 </a>
             </li>
             <li class="nav-item">
